# claude-agent-sdk-rs

./: .gitignore  API.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md  README_zh-CN.md
.tda/features/support-image-input/: config.yml  status.yml  workflow.yml
.tda/features/support-image-input/docs/: codex-review-fix-results.md  codex-review-results.md  implementation-details.md  verification-results.md
.tda/features/support-image-input/logs/: codex-review-brief.md  codex-review-fix-brief.md  codex-review-fix-full.md  codex-review-fix-trace.jsonl  codex-review-full.md  codex-review-trace.jsonl  design-brief.md  design-full.md  design-trace.jsonl  (+15 more)
docs/: ALL_PHASES_COMPLETE.md  ARCHITECTURE.md  EXAMPLES_QUICK_REFERENCE.md  EXAMPLE_TEST_REPORT.md  FEATURE_PARITY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE_4_COMPLETION.md  PLUGIN_FIX_REPORT.md  PLUGIN_GUIDE.md  RELEASE_NOTES_v0.3.0.md  TROUBLESHOOTING.md  VERIFICATION_COMPLETE.md
examples/: 01_hello_world.rs  02_limit_tool_use.rs  03_monitor_tools.rs  04_permission_callbacks.rs  05_hooks_pretooluse.rs  06_bidirectional_client.rs  07_dynamic_control.rs  08_mcp_server_integration.rs  09_agents.rs  10_include_partial_messages.rs  11_setting_sources.rs  12_stderr_callback.rs  13_system_prompt.rs  14_streaming_mode.rs  15_hooks_comprehensive.rs  16_session_management.rs  17_fallback_model.rs  18_max_budget_usd.rs  19_max_thinking_tokens.rs  20_query_stream.rs  21_custom_plugins.rs  22_plugin_integration.rs  23_image_input.rs  24_efficiency_hooks.rs  MCP_INTEGRATION.md  README.md
fixtures/: calculator.py  greet.py  math_utils.py  sample_text.txt  test2.txt  test3.txt  test_math_utils.py  word_counter.py
fixtures/raw_messages/: assistant_001.json  assistant_002.json  assistant_003.json  assistant_004.json  assistant_005.json  assistant_006.json  assistant_007.json  assistant_008.json  assistant_009.json  assistant_010.json  assistant_011.json  assistant_012.json  assistant_013.json  assistant_014.json  assistant_015.json  assistant_016.json  assistant_017.json  result_001.json  result_002.json  result_003.json  result_004.json  result_005.json  result_006.json  stream_event_001.json  stream_event_002.json  stream_event_003.json  stream_event_004.json  stream_event_005.json  stream_event_006.json  stream_event_007.json  stream_event_008.json  stream_event_009.json  stream_event_010.json  stream_event_011.json  stream_event_012.json  stream_event_013.json  stream_event_014.json  stream_event_015.json  stream_event_016.json  stream_event_017.json  (+92 more)
fixtures/test-plugin/: README.md
fixtures/test-plugin/.claude-plugin/: plugin.json
fixtures/test-plugin/commands/: test-cmd.md
specs/: 0001-spec.md  0002-code-review-improvements.md  0003-concurrency-improvements.md  0003-feature-parity-0.1.6.md  0004-feature-parity-review.md  0005-performance-optimization.md  0006-testing-mock-framework.md  feature-parity.md  instructions.md
src/: client.rs  errors.rs  lib.rs  query.rs  version.rs
src/internal/: client.rs  message_parser.rs  mod.rs  query_full.rs
src/internal/transport/: mod.rs  subprocess.rs  trait_def.rs
src/testing/: client.rs  mod.rs  scenario.rs  snapshot.rs  timing.rs  transport.rs
src/testing/builders/: assistant.rs  mod.rs  result.rs  system.rs  tool.rs
src/testing/recorders/: hooks.rs  mod.rs  permissions.rs
src/types/: config.rs  efficiency.rs  hooks.rs  mcp.rs  messages.rs  mod.rs  permissions.rs  plugin.rs
tests/: README.md  client_unit_tests.rs  error_handling_tests.rs  integration_tests.rs  mock_framework_tests.rs  permission_control_protocol_tests.rs  real_fixtures_test.rs
tools/: FIXTURE_SUMMARY.md  REAL_DATA_SUMMARY.md  capture_agents.py  capture_content_blocks.py  capture_control_protocol.py  capture_hooks.py  capture_mcp_configs.py  capture_messages.py  capture_permissions.py  capture_real_interactions.py  pyproject.toml
(+5 files in other folders)
