[package]
name = "claude-agent-sdk-rs"
version = "0.1.2"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
documentation = "https://docs.rs/claude-agent-sdk-rs"
repository = "https://github.com/tyrchen/claude-agent-sdk-rs"
homepage = "https://github.com/tyrchen/claude-agent-sdk-rs"
description = "Rust SDK for Claude Code CLI with bidirectional streaming, hooks, and custom tools support"
readme = "README.md"
categories = ["development-tools", "api-bindings", "asynchronous"]
keywords = ["claude", "ai", "agent", "anthropic", "llm"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Async traits
async-trait = "0.1"
futures = "0.3"
pin-project = "1.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Path utilities
path-absolutize = "3.1"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.18", features = ["v4"] }
typed-builder = "0.23.0"

# Macro utilities
paste = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[features]
default = []
